--- a/app/src/main/res/drawable/ic_line.xml
+++ b/app/src/main/res/drawable/ic_line.xml
@@ -1,4 +1,7 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="line">
-  <stroke android:width="1dp" android:color="#F1F2F4"/>
-  <size android:height="2dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="line">
+    <stroke
+        android:width="1dp"
+        android:color="#F1F2F4" />
+    <size android:height="2dp" />
 </shape>
