--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SecondActivity">
+    tools:context=".activity.DressChooser">
 
 
     <include
@@ -14,12 +14,11 @@
 
     <include
         android:id="@+id/menu_tools"
-        android:layout_height="55dp"
-        android:layout_width="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/body"
         layout="@layout/bottom_menu"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/body" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,8 +39,8 @@
             android:id="@+id/icon_tap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vvsmall_margin"
             android:layout_marginStart="@dimen/vsmall_margin"
+            android:layout_marginTop="@dimen/vvsmall_margin"
             android:layout_weight="1"
             android:src="@drawable/ic_tap"
             app:layout_constraintBottom_toTopOf="@id/guideLine"
@@ -73,6 +72,7 @@
             android:id="@+id/search_bar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/vsmall_margin"
             android:layout_marginTop="@dimen/vvsmall_margin"
             android:layout_weight="1"
             android:ellipsize="end"
@@ -81,7 +81,6 @@
             android:text="@string/header"
             android:textColor="@color/header"
             android:textSize="13sp"
-            android:layout_marginStart="@dimen/vsmall_margin"
             app:layout_constraintBottom_toTopOf="@id/guideLine"
             app:layout_constraintEnd_toStartOf="@id/sort_by"
             app:layout_constraintStart_toEndOf="@id/icon_tap"
@@ -92,6 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vvsmall_margin"
+            android:layout_marginEnd="@dimen/vsmall_margin"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
             android:gravity="end"
@@ -99,7 +99,6 @@
             android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:layout_marginEnd="@dimen/vsmall_margin"
             app:layout_constraintBottom_toTopOf="@id/guideLine"
             app:layout_constraintEnd_toStartOf="@id/icon_sort"
             app:layout_constraintTop_toTopOf="parent" />
@@ -120,7 +119,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
