--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -1,88 +1,86 @@
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/shadow"
     android:foregroundGravity="center_vertical"
     android:gravity="center_vertical"
-    android:paddingTop="@dimen/vsmall_margin"
     android:paddingStart="@dimen/tool_smargin"
-    android:paddingEnd="@dimen/tool_smargin"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingTop="@dimen/vsmall_margin"
+    android:paddingEnd="@dimen/tool_smargin">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/home"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/search"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:layout_weight="1"
         android:src="@drawable/ic_home"
         android:tint="@color/menu"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/search"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/search"
-        app:layout_constraintStart_toEndOf="@id/home"
-        app:layout_constraintEnd_toStartOf="@id/basket"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_weight="1"
         android:src="@drawable/ic_magnify"
-        android:tint="@color/menu" />
+        android:tint="@color/menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/basket"
+        app:layout_constraintStart_toEndOf="@id/home"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/basket"
-        app:layout_constraintStart_toEndOf="@id/search"
-        app:layout_constraintEnd_toStartOf="@id/user_logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:layout_weight="1"
         android:src="@drawable/ic_purchases"
-        android:tint="@color/menu" />
+        android:tint="@color/menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/user_logo"
+        app:layout_constraintStart_toEndOf="@id/search"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/user_logo"
-        app:layout_constraintStart_toEndOf="@id/basket"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:layout_weight="1"
         android:src="@drawable/ic_user"
-        android:tint="@color/menu" />
+        android:tint="@color/menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/basket"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/basket_circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_circle"
-        app:layout_constraintBottom_toBottomOf="@id/basket"
-        app:layout_constraintStart_toStartOf="@+id/basket"
         android:layout_marginStart="@dimen/vsmall_margin"
         android:layout_marginBottom="@dimen/vsmall_margin"
+        android:src="@drawable/ic_circle"
         android:visibility="visible"
-        />
+        app:layout_constraintBottom_toBottomOf="@id/basket"
+        app:layout_constraintStart_toStartOf="@+id/basket" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/basket_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/circle_num_template"
-        android:textSize="@dimen/circle_num_size"
         android:textColor="@color/background"
-        app:layout_constraintStart_toStartOf="@+id/basket_circle"
-        app:layout_constraintEnd_toEndOf="@+id/basket_circle"
-        app:layout_constraintTop_toTopOf="@id/basket_circle"
-        app:layout_constraintBottom_toBottomOf="@id/basket_circle"
+        android:textSize="@dimen/circle_num_size"
         android:visibility="visible"
-        />
+        app:layout_constraintBottom_toBottomOf="@id/basket_circle"
+        app:layout_constraintEnd_toEndOf="@+id/basket_circle"
+        app:layout_constraintStart_toStartOf="@+id/basket_circle"
+        app:layout_constraintTop_toTopOf="@id/basket_circle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
