--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:tools="http://schemas.android.com/tools"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/AppToolbar"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
+    style="@style/AppToolbar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/toolbar_height"
-    android:gravity="center_vertical"
+    android:elevation="0dp"
 
-    app:titleMarginStart="0dp"
+    android:gravity="center_vertical"
     app:contentInsetStart="0dp"
     app:contentInsetStartWithNavigation="0dp"
 
     app:titleMarginBottom="20dp"
 
-    android:elevation="0dp"
+    app:titleMarginStart="0dp"
     app:titleTextColor="@color/background">
 
 </androidx.appcompat.widget.Toolbar>
