--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_item_search"
-        android:title="Search"
-        android:orderInCategory="1"
         android:icon="@drawable/ic_magnify"
+        android:orderInCategory="1"
+        android:title="Search"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_item_filter"
-        android:title="Filter"
-        android:orderInCategory="2"
         android:icon="@drawable/ic_filter"
-        app:showAsAction="always"
-        />
+        android:orderInCategory="2"
+        android:title="Filter"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_item_logout"
-        android:orderInCategory="3"
         android:icon="@drawable/ic_logout"
-        app:showAsAction="always"
+        android:orderInCategory="3"
         android:title="Logout"
-        android:visible="false"/>
+        android:visible="false"
+        app:showAsAction="always" />
 </menu>
