--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -5,7 +5,7 @@
     style="@style/AppTheme."
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.DressDetails">
+    tools:context=".activity.screens.dressdetails.DressDetails">
 
     <include
         android:id="@+id/toolbar"
